style(merlin-www-top-stories): fix alignment of top stories buttons

--- a/packages/merlin-www-top-stories/sass/gq/gq.scss
+++ b/packages/merlin-www-top-stories/sass/gq/gq.scss
@@ -57,6 +57,8 @@
     &:disabled {
         @include button-top-stories-disabled;
     }
+
+    width: 100%;
 }
 
 .c-top-stories__nav-btn--left {
