--- a/packages/merlin-www-top-stories/sass/wired/wired.scss
+++ b/packages/merlin-www-top-stories/sass/wired/wired.scss
@@ -53,6 +53,8 @@
     &:disabled {
         @include button-top-stories-disabled;
     }
+
+    width: 100%;
 }
 
 .c-top-stories__cards {
