--- a/packages/merlin-www-top-stories/sass/wireframe/wireframe.scss
+++ b/packages/merlin-www-top-stories/sass/wireframe/wireframe.scss
@@ -35,7 +35,8 @@
 }
 
 .c-top-stories__nav {
-    display: none;
+    box-sizing: border-box;
+    // display: none;
 }
 
 .c-top-stories__nav-btn {
